--- a/_sections/portfolio.html
+++ b/_sections/portfolio.html
@@ -4,51 +4,28 @@ icon: fa-th
 order: 2
 ---
 
-<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-  egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-  Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-  fusce hendrerit lacus ridiculus.</p>
+<p>A sample of some of the projects I've worked on, and have blogged about here.</p>
 
   <div class="row">
     <div class="4u 12u$(mobile)">
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic02.jpg' | relative_url }}" alt="Ipsum Feugiat" /></a>
+        <a href="#" class="image fit"><img src="{{ 'assets/images/cloudconnectedroomsensor.jpg' | relative_url }}" alt="Cloud Connected Room Sensor" /></a>
         <header>
-          <h3>Ipsum Feugiat</h3>
+          <h3>Cloud Connected Room Sensor</h3>
         </header>
       </div>
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic03.jpg' | relative_url }}" alt="Rhoncus Semper" /></a>
+        <a href="#" class="image fit"><img src="{{ 'assets/images/roommultisensor.jpg' | relative_url }}" alt="Room Multi-Sensor" /></a>
         <header>
-          <h3>Rhoncus Semper</h3>
-        </header>
-      </div>
-    </div>
-    <div class="4u 12u$(mobile)">
-      <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic04.jpg' | relative_url }}" alt="Magna Nullam" /></a>
-        <header>
-          <h3>Magna Nullam</h3>
-        </header>
-      </div>
-      <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic05.jpg' | relative_url }}" alt="Natoque Vitae" /></a>
-        <header>
-          <h3>Natoque Vitae</h3>
+          <h3>Room Multi-Sensor</h3>
         </header>
       </div>
     </div>
     <div class="4u 12u$(mobile)">
       <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic06.jpg' | relative_url }}" alt="Dolor Penatibus" /></a>
+        <a href="#" class="image fit"><img src="{{ 'assets/images/plantsensor.jpg' | relative_url }}" alt="Plant Sensor" /></a>
         <header>
-          <h3>Dolor Penatibus</h3>
-        </header>
-      </div>
-      <div class="item">
-        <a href="#" class="image fit"><img src="{{ 'assets/images/pic07.jpg' | relative_url }}" alt="Orci Convallis" /></a>
-        <header>
-          <h3>Orci Convallis</h3>
+          <h3>Plant Sensor</h3>
         </header>
       </div>
     </div>
