--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@ icon: fa-pencil-alt
 order: 2
 ---
 
-{%- assign _posts = site.categories.Plant Sensor | sort: 'date' | reverse -%}
+{%- assign _posts = site.posts | sort: 'date' | reverse -%}
 {%- include header.html scrolly_nav=_posts -%}
 <!-- Main -->
 <div id="main">
